--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,10 @@ variables:
 
 steps:
   - task: UseDotNet@2
-    displayName: "Use netcoreapp2.0"
+    displayName: "Use netcoreapp2.0 (for BundlerMinifier.Core cli tool)"
     inputs:
       packageType: "sdk"
-      version: "2.0.x"
+      version: "2.2.106"
 
   - task: UseDotNet@2
     displayName: "Use net6.0"
