--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -19,7 +19,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
-    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -48,9 +47,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj" />
-    <ProjectReference Include="..\Purchasing.Jobs.CreateOrderIndexes\Purchasing.Jobs.CreateOrderIndexes.csproj" />
-    <ProjectReference Include="..\Purchasing.Jobs.UpdateLookupIndexes\Purchasing.Jobs.UpdateLookupIndexes.csproj" />
-    <ProjectReference Include="..\Purchasing.Jobs.UpdateOrderIndexes\Purchasing.Jobs.UpdateOrderIndexes.csproj" />
     <ProjectReference Include="..\Purchasing.WS\Purchasing.WS.csproj" />
     <ProjectReference Include="..\UCDArch\UCDArch.csproj" />
   </ItemGroup>
@@ -88,6 +84,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="1.1.4" />
     <PackageReference Include="Serilog.Exceptions" Version="8.1.0" />
+		<PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1"/>
     <PackageReference Include="Castle.Windsor.Extensions.DependencyInjection" Version="5.1.1" />
     <PackageReference Include="AspNetCore.Security.CAS" Version="2.0.5" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
