--- a/Purchasing.Jobs.CreateOrderIndexes/Purchasing.Jobs.CreateOrderIndexes.csproj
+++ b/Purchasing.Jobs.CreateOrderIndexes/Purchasing.Jobs.CreateOrderIndexes.csproj
@@ -25,4 +25,9 @@
 	<ItemGroup>
 		<Content Include="appsettings.json"/>
 	</ItemGroup>
+  <ItemGroup>
+    <None Update="run.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+	</ItemGroup>
 </Project>
