--- a/Purchasing.Jobs.CreateOrderIndexes/Purchasing.Jobs.CreateOrderIndexes.csproj
+++ b/Purchasing.Jobs.CreateOrderIndexes/Purchasing.Jobs.CreateOrderIndexes.csproj
@@ -22,10 +22,10 @@
 		<PackageReference Include="Microsoft.Web.WebJobs.Publish" Version="17.1.359"/>
 		<PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.31"/>
 	</ItemGroup>
-	<ItemGroup>
-		<Content Include="appsettings.json"/>
-	</ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="run.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
