--- a/Purchasing.Jobs.NightlySync/Purchasing.Jobs.NightlySync.csproj
+++ b/Purchasing.Jobs.NightlySync/Purchasing.Jobs.NightlySync.csproj
@@ -16,8 +16,11 @@
     <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
   </PropertyGroup>
 	<ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
 		<None Update="settings.job">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
     <None Update="run.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -30,8 +33,5 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Web.WebJobs.Publish" Version="17.1.359"/>
 		<PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.31"/>
-	</ItemGroup>
-	<ItemGroup>
-		<Content Include="appsettings.json"/>
 	</ItemGroup>
 </Project>
