--- a/Purchasing.Jobs.UpdateLookupIndexes/Purchasing.Jobs.UpdateLookupIndexes.csproj
+++ b/Purchasing.Jobs.UpdateLookupIndexes/Purchasing.Jobs.UpdateLookupIndexes.csproj
@@ -30,8 +30,11 @@
     <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
   </PropertyGroup>
 	<ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
 		<None Update="settings.job">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
     <None Update="run.cmd">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -42,27 +45,7 @@
 		<ProjectReference Include="..\Purchasing.Jobs.Common\Purchasing.Jobs.Common.csproj"/>
 	</ItemGroup>
 	<ItemGroup>
-		<BootstrapperPackage Include=".NETFramework,Version=v4.5.1">
-			<Visible>False</Visible>
-			<ProductName>Microsoft .NET Framework 4.5.1 %28x86 and x64%29</ProductName>
-			<Install>true</Install>
-		</BootstrapperPackage>
-		<BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-			<Visible>False</Visible>
-			<ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-			<Install>false</Install>
-		</BootstrapperPackage>
-		<BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-			<Visible>False</Visible>
-			<ProductName>.NET Framework 3.5 SP1</ProductName>
-			<Install>false</Install>
-		</BootstrapperPackage>
-	</ItemGroup>
-	<ItemGroup>
 		<PackageReference Include="Microsoft.Web.WebJobs.Publish" Version="17.1.359"/>
 		<PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.31"/>
-	</ItemGroup>
-	<ItemGroup>
-		<Content Include="appsettings.json"/>
 	</ItemGroup>
 </Project>
