Try to get db config working for integration tests

--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -23,7 +23,8 @@
   "Stackify.ElasticUrl": "[External]",
   "MainDB": {
     "Schema": "PrePurchasing.dbo",
-    "BatchSize": 25
+    "BatchSize": 25,
+    "IsSqlite": false
   },
   "ConnectionStrings": {
     "MainDB": "data source=.\\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;"
