Add Elastic APM

--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -42,5 +42,13 @@
   },
   "ValidationKey": "[External]",
   "AzureStorageAccountName": "[External]",
-  "AzureStorageKey": "[External]"
+  "AzureStorageKey": "[External]",
+  "ElasticApm": {
+    "Enabled": false,
+    "SecretToken": "[External]",
+    "ServerUrls": "[External]",
+    "ServiceName": "Purchasing",
+    "Environment": "Development",
+    "ElasticUrl": "[External]"
+  }
 }
