--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -67,6 +67,8 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.3" />
+    <PackageReference Include="Elastic.Apm.NetCoreAll" Version="1.16.1" />
+    <PackageReference Include="Elastic.Apm.SerilogEnricher" Version="1.5.3" />
     <PackageReference Include="ietws" Version="0.2.8" />
     <PackageReference Include="itext7" Version="7.2.1" />
     <PackageReference Include="jQuery" Version="3.6.0" />
