--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -50,5 +50,9 @@
     "ServiceName": "Purchasing",
     "Environment": "Development",
     "ElasticUrl": "[External]"
+  },
+  "AggieEnterprise": {
+    "GraphQlUrl": "[External]",
+    "Token": "[External]"
   }
 }
