--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -38,6 +38,7 @@
 		<PackageReference Include="AggieEnterpriseApi" Version="0.2.79" />
 		<PackageReference Include="NEST.JsonNetSerializer" Version="7.13.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 		<PackageReference Include="AutoMapper" Version="11.0.1" />
