--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -53,6 +53,8 @@
   },
   "AggieEnterprise": {
     "GraphQlUrl": "[External]",
-    "Token": "[External]"
+    "Token": "[External]",
+    "RequisitionSourceName": "UCD Online Pre Purchasing"
+
   }
 }
