--- a/Purchasing.Jobs.AggieEnterprise/Purchasing.Jobs.AggieEnterprise.csproj
+++ b/Purchasing.Jobs.AggieEnterprise/Purchasing.Jobs.AggieEnterprise.csproj
@@ -1,10 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Purchasing.Jobs.AggieEnterprise</Title>
+    <Copyright>2022</Copyright>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj" />
+    <ProjectReference Include="..\Purchasing.Jobs.Common\Purchasing.Jobs.Common.csproj" />
+  </ItemGroup>
 
 </Project>
