--- a/Purchasing.Jobs.AggieEnterprise/Purchasing.Jobs.AggieEnterprise.csproj
+++ b/Purchasing.Jobs.AggieEnterprise/Purchasing.Jobs.AggieEnterprise.csproj
@@ -14,4 +14,16 @@
     <ProjectReference Include="..\Purchasing.Jobs.Common\Purchasing.Jobs.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="run.cmd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="settings.job">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
