--- a/Purchasing.Jobs.AggieEnterprise/appsettings.json
+++ b/Purchasing.Jobs.AggieEnterprise/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Stackify.AppName": "Purchasing.Jobs.DailyEmailNotifications",
+  "Stackify.AppName": "Purchasing.Jobs.AggieEnterprise",
   "Stackify.Environment": "[External]",
   "Stackify.ApiKey": "[External]",
   "Stackify.ElasticUrl": "[External]",
