Supply natural account if missing

--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -54,7 +54,7 @@
   "AggieEnterprise": {
     "GraphQlUrl": "[External]",
     "Token": "[External]",
-    "RequisitionSourceName": "UCD Online Pre Purchasing"
-
+    "RequisitionSourceName": "UCD Online Pre Purchasing",
+    "DefaultNaturalAccount": "770000"
   }
 }
