--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -54,6 +54,11 @@
   "AggieEnterprise": {
     "GraphQlUrl": "[External]",
     "Token": "[External]",
+    "ConsumerKey": "[External]",
+    "ConsumerSecret": "[External]",
+    "TokenEndpoint": "[External]",
+    "ScopeApp": "OPP-Web",
+    "ScopeEnv": "Test",
     "RequisitionSourceName": "UCD Online Pre Purchasing",
     "DefaultNaturalAccount": "522201"
   }
