--- a/Purchasing.Jobs.AggieEnterprise/appsettings.json
+++ b/Purchasing.Jobs.AggieEnterprise/appsettings.json
@@ -5,6 +5,11 @@
   "Stackify.ElasticUrl": "[External]",
   "AggieEnterprise": {
     "GraphQlUrl": "[External]",
-    "Token": "[External]"
+    "Token": "[External]",
+    "ConsumerKey": "[External]",
+    "ConsumerSecret": "[External]",
+    "TokenEndpoint": "[External]",
+    "ScopeApp": "OPP-Job",
+    "ScopeEnv": "Test"
   }
 }
