Allow large for data

--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -18,7 +18,7 @@
   "Stackify.AppName": "Purchasing",
   "Stackify.Environment": "[External]",
   "Stackify.ApiKey": "[External]",
-  "PersonLookupUrl": "http://directory.ucdavis.edu/search/directory_results.shtml?filter=",
+  "PersonLookupUrl": "https://who.ucdavis.edu/Detail/",
   "IetWsKey": "[External]",
   "Stackify.ElasticUrl": "[External]",
   "MainDB": {
