update readme with full instructions
also update to use a caes specific password for consistency

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
   },
   "containerEnv": {
     "ASPNETCORE_Kestrel__Certificates__Default__Path": "/home/vscode/.aspnet/https/aspnetapp.pfx",
-    "ASPNETCORE_Kestrel__Certificates__Default__Password": "SecurePwdGoesHere"
+    "ASPNETCORE_Kestrel__Certificates__Default__Password": "CaesLocalDevCertPW"
   },
   // Run when the container first boots
   "postCreateCommand": "dotnet restore",
